tests/ui/contracts/empty-requires.stderr
error[E0308]: mismatched types
  --> $DIR/empty-requires.rs:9:1
   |
LL | #[requires()]
   | ^^^^^^^^^^^^^ expected `bool`, found `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
